--- a/School.Web/School.Web.csproj
+++ b/School.Web/School.Web.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\School.Data\School.Data.csproj" />
+  </ItemGroup>
+
 </Project>
